--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -14,7 +14,7 @@
 .products {
   flex: 1;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: 30px 20px;
   background-color: white; 
